@@ -1,3 +1,8 @@
+2008-06-13  Laurent Michel  <ldm@thorgal.homelinux.org>
+
+	* lightning/i386/core-64.h: Add (void) casts for C++ compatibility.
+	* lightning/i386/asm.h: Likewise.
+
 2008-06-12  Paolo Bonzini  <bonzini@gnu.org>
 
 	* lightning/i386/core.h: Move JIT_V definition...
